	PR python/12027: 	* python/python-internal.h (frame_object_type): Declare. 	* python/py-symbol.c (sympy_needs_frame): New function. 	(sympy_value): New function. 	(symbol_object_getset): Add "needs_frame". 	(symbol_object_methods): Add "value". 	* python/py-frame.c (frame_object_type): No longer static. gdb/doc 	* gdb.texinfo (Symbols In Python): Document Symbol.needs_frame and 	Symbol.value. gdb/testsuite 	* gdb.python/py-symbol.exp: Test Symbol.needs_frame and 	Symbol.value. 	* gdb.python/py-symbol.c (qq): Set default value.